--- a/card.html
+++ b/card.html
@@ -84,7 +84,7 @@
       color: #fff;
       border-radius: 15px;
       flex: 0 0 auto;
-      width: 280px;
+      width: px;
       padding: 20px;
       position: relative;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
