--- a/card.html
+++ b/card.html
@@ -329,7 +329,7 @@
           </a>
         </li>
         <li class="active">
-          <a href="#">
+          <a href="index.html">
             <i class="fa-regular fa-credit-card"></i>
             Cards
           </a>
