--- a/card.html
+++ b/card.html
@@ -317,7 +317,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#">
+          <a href="index.html">
             <i class="fas fa-wallet"></i>
             Balance
           </a>
