--- a/card.html
+++ b/card.html
@@ -366,13 +366,13 @@
     if (!localStorage.getItem("cards")) {
       const defaultCard = {
         id: Date.now(),
-        fullCardNumber: "4519 461234569418",
+        fullCardNumber: "4519 4612 3456 9418",
         maskedCardNumber: "4519 46** **** 9418",
         fullCvv: "123",
         maskedCvv: "***",
         cardHolder: "KAKEETO DANIEL",
         expiry: "VALID THRU 02/28",
-        balance: 30356643.23,
+        balance: 2536676.23,
         transactions: [],
         showDetails: false
       };
