--- a/card.html
+++ b/card.html
@@ -374,7 +374,7 @@
         expiry: "VALID THRU 02/28",
         balance: 2536676.23,
         transactions: [],
-        showDetails: false
+        showDetails: true
       };
       saveCards([defaultCard]);
     }
